# SkippingRope

./: .clang_complete  .gitignore  CMakeLists.txt  build.bat
.nova/Tasks/: Playdate Simulator.json
Source/: main.lua  pdxinfo
include/box2d/: math_c.h  math_cpp.h
libs/: box2d.lib
libs/box2d/: box2d.lib
src/: CollisionHandler.c  CollisionHandler.h  HealthHandler.c  HealthHandler.h  Memory.h  Utils.h  XUtils.c  XUtils.h  callbacks.c  callbacks.h  draw.c  draw.h  game.c  game.h  gameobj.c  gameobj.h  hash.h  logic.h  main.c  model.h  render.c  render.h  struct_defines.h  tiny_math.h
src/ParticleSystem/: emitter.c  emitter.h
src/Physics2D/: Body2D.c  Body2D.h  Collision.c  Collision.h  Memory.h  Utils.h  World2D.c  World2D.h
src/Physics2D/DataStructs/: Array1D.c  Array1D.h  Array2D.c  Array2D.h  List.c  List.h  QuadTree.c  QuadTree.h
src/Physics2D/Math/: Rect2D.h  Shape2D.c  Shape2D.h  Transform2D.h  Vector2D.c  Vector2D.h
src/SceneManager/: EventDefines.h  EventIDs.h  GameOverScene.c  GameOverScene.h  GameScene.c  GameScene.h  MenuScene.c  MenuScene.h  MenuSceneEvents.c  Scene.c  Scene.h  SceneIDs.h  SceneManager.c  SceneManager.h
src/SceneManager/Events/: Event.h  EventDefines.h  EventIDs.h  GameOverSceneEvents.c  GameOverSceneEvents.h  GameSceneEvents.c  GameSceneEvents.h  MenuSceneEvents.c  MenuSceneEvents.h  SceneIDs.h
src/ecs/: .component.h.swp  EntityIDs.h  component.h  entity.c  entity.cpp  entity.h  system.c  system.h
src/playbox2d/: array.c  playbox.c
